[project]
name = "CacheQueuer"
version = "0.0.1"
authors = [
  { name="Guillem Baldi", email="guillembaldi@gmail.com" },
]
dependencies = [
    "psutil",
    "PySide2",
]
description = "" 
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gbg4812/CacheQueuer.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
